[package]
name = "nederlandskie"
version = "0.0.0"
publish = false
edition = "2021"
default-run = "nederlandskie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.90"
async-trait = "0.1.83"
atrium-api = "0.24.6"
atrium-xrpc = "0.11.5"
atrium-xrpc-client = "0.5.8"
axum = "0.7.7"
chat-gpt-lib-rs = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
figment = { version = "0.10.19", features = ["env", "toml"] }
http = "1.1.0"
ipld-core = "0.4.1"
lingua = "1.6.2"
log = "0.4.22"
rs-car = "0.4.1"
scooby = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
sqlx = { version = "0.8.2", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
